2005-08-08  Bruno Haible  <bruno@clisp.org>

	* msginit.c (catalogname_for_locale): Add support for Old English,
	Hyam, Jju, Tyap, Maithili, Nahuatl, Low Saxon, Northern Sotho, Páez,
	Tetum, Zapotec.
	(englishname_of_language): Add support for Old English, Hyam, Jju,
	Tyap, Kagoma, Maithili, Mayan, Nahuatl, Low Saxon, Northern Sotho,
	Páez, Tetum, Zapotec.

2005-05-21  Bruno Haible  <bruno@clisp.org>

	New undocumented option, used by glocale PO files.
	* msgfmt.c (include_fuzzies): Renamed from include_all.
	(include_untranslated): New variable.
	(long_options): Add --use-untranslated.
	(main): Handle --use-untranslated.
	(msgfmt_frob_new_message): Test include_untranslated.
	(msgfmt_comment_special): Update.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* user-email.sh.in (datarootdir): New variable.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on systems without iconv().
	* xgettext.c (convert_string): Remove fallback macro definition.
	(from_current_source_encoding) [!HAVE_ICONV]: Just abort here.

2005-07-17  Bruno Haible  <bruno@clisp.org>

	* po-lex.c (mb_width): Remove gcc warnings on platform with unsigned
	'char' type (e.g. Linux/PowerPC).
	Reported by Jeff Rizzo <riz@netbsd.org>.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msgmerge_SOURCES, xgettext_SOURCES, msgattrib_SOURCES,
	msgcat_SOURCES, msgcomm_SOURCES, msgconv_SOURCES, msgen_SOURCES,
	msgfilter_SOURCES, msggrep_SOURCES, msguniq_SOURCES): On mingw, use
	C++ source code.
	(libgettextsrc_la_LDFLAGS, libgettextpo_la_LDFLAGS): Use LTNOUNDEF.
	(format_CFLAGS): New variable.
	(format.lo): New rule.
	(msg*_CFLAGS, xgettext_CFLAGS): Remove variables.
	(msg*_CPPFLAGS, xgettext_CPPFLAGS): New variables.

2005-05-27  Bruno Haible  <bruno@clisp.org>

	* write-po.c (wrap): Output \a and \v as an escape sequence, like
	\b, \f, \r.
	Suggested by Asgeir Frimannsson <asgeirf@redhat.com>.

2005-05-05  Bruno Haible  <bruno@clisp.org>
