@@ -38,6 +38,7 @@
 #include "gmo.h"
 #include "hash-string.h"
 
+#include "byteswap.h"
 #include "error.h"
 #include "hash.h"
 #include "message.h"
@@ -67,8 +68,15 @@
 /* Alignment of strings in resulting .mo file.  */
 size_t alignment;
 
+/* True if writing a .mo file in opposite endianness than the host.  */
+bool byteswap;
+
 /* True if no hash table in .mo is wanted.  */
 bool no_hash_table;
+
+
+/* Destructively changes the byte order of a 32-bit value in memory.  */
+#define BSWAP32(x) (x) = bswap_32 (x)
 
 
 /* Indices into the strings contained in 'struct pre_message' and
@@ -447,6 +455,24 @@ write_table (FILE *output_file, message_list_ty *mlp)
      compute the offsets of each string, including the proper alignment.  */
 
   /* Write the header out.  */
+  if (byteswap)
+    {
+      BSWAP32 (header.magic);
+      BSWAP32 (header.revision);
+      BSWAP32 (header.nstrings);
+      BSWAP32 (header.orig_tab_offset);
+      BSWAP32 (header.trans_tab_offset);
+      BSWAP32 (header.hash_tab_size);
+      BSWAP32 (header.hash_tab_offset);
+      if (minor_revision >= 1)
+	{
+	  BSWAP32 (header.n_sysdep_segments);
+	  BSWAP32 (header.sysdep_segments_offset);
+	  BSWAP32 (header.n_sysdep_strings);
+	  BSWAP32 (header.orig_sysdep_tab_offset);
+	  BSWAP32 (header.trans_sysdep_tab_offset);
+	}
+    }
   fwrite (&header, header_size, 1, output_file);
 
   /* Table for original string offsets.  */
@@ -462,6 +488,12 @@ write_table (FILE *output_file, message_list_ty *mlp)
       /* Subtract 1 because of the terminating NUL.  */
       orig_tab[j].length--;
     }
+  if (byteswap)
+    for (j = 0; j < nstrings; j++)
+      {
+	BSWAP32 (orig_tab[j].length);
+	BSWAP32 (orig_tab[j].offset);
+      }
   fwrite (orig_tab, nstrings * sizeof (struct string_desc), 1, output_file);
 
   /* Table for translated string offsets.  */
@@ -476,6 +508,12 @@ write_table (FILE *output_file, message_list_ty *mlp)
       /* Subtract 1 because of the terminating NUL.  */
       trans_tab[j].length--;
     }
+  if (byteswap)
+    for (j = 0; j < nstrings; j++)
+      {
+	BSWAP32 (trans_tab[j].length);
+	BSWAP32 (trans_tab[j].offset);
+      }
   fwrite (trans_tab, nstrings * sizeof (struct string_desc), 1, output_file);
 
   /* Skip this part when no hash table is needed.  */
@@ -514,6 +552,9 @@ write_table (FILE *output_file, message_list_ty *mlp)
 	}
 
       /* Write the hash table out.  */
+      if (byteswap)
+	for (j = 0; j < hash_tab_size; j++)
+	  BSWAP32 (hash_tab[j]);
       fwrite (hash_tab, hash_tab_size * sizeof (nls_uint32), 1, output_file);
 
       free (hash_tab);
@@ -540,6 +581,12 @@ write_table (FILE *output_file, message_list_ty *mlp)
 	  offset += sysdep_segments_tab[i].length;
 	}
 
+      if (byteswap)
+	for (i = 0; i < n_sysdep_segments; i++)
+	  {
+	    BSWAP32 (sysdep_segments_tab[i].length);
+	    BSWAP32 (sysdep_segments_tab[i].offset);
+	  }
       fwrite (sysdep_segments_tab,
 	      n_sysdep_segments * sizeof (struct sysdep_segment), 1,
 	      output_file);
@@ -564,6 +611,9 @@ write_table (FILE *output_file, message_list_ty *mlp)
 			    * sizeof (struct segment_pair);
 	    }
 	  /* Write the table for original/translated sysdep string offsets.  */
+	  if (byteswap)
+	    for (j = 0; j < n_sysdep_strings; j++)
+	      BSWAP32 (sysdep_tab[j]);
 	  fwrite (sysdep_tab, n_sysdep_strings * sizeof (nls_uint32), 1,
 		  output_file);
 	}
@@ -595,6 +645,15 @@ write_table (FILE *output_file, message_list_ty *mlp)
 	      {
 		str->segments[pre->segmentcount].segsize += msg->id_plural_len;
 		offset += msg->id_plural_len;
+	      }
+	    if (byteswap)
+	      {
+		BSWAP32 (str->offset);
+		for (i = 0; i <= pre->segmentcount; i++)
+		  {
+		    BSWAP32 (str->segments[i].segsize);
+		    BSWAP32 (str->segments[i].sysdepref);
+		  }
 	      }
 	    fwrite (str,
 		    sizeof (struct sysdep_string)
